--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 urllib3==2.3.0
 wcwidth==0.2.13
-gunicorn==19.7.1
+gunicorn>=21.2.0
 whitenoise
 dj_database_url
 psycopg2-binary
